--- a/ui/NewX509.ui
+++ b/ui/NewX509.ui
@@ -9,7 +9,7 @@
     <x>0</x>
     <y>0</y>
     <width>557</width>
-    <height>608</height>
+    <height>591</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -285,19 +285,6 @@ Empy, CA, client, server</string>
            <widget class="QLabel" name="TextLabel2_3_2" >
             <property name="text" >
              <string>Template for the new certificate</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="0" colspan="2" >
-           <widget class="QCheckBox" name="changeDefault" >
-            <property name="toolTip" >
-             <string>Check this to adjust all details of the certificate</string>
-            </property>
-            <property name="text" >
-             <string>Change the default &amp;extension settings from the template</string>
-            </property>
-            <property name="checked" >
-             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -1176,33 +1163,23 @@ Example:
           <number>6</number>
          </property>
          <item>
-          <layout class="QHBoxLayout" >
-           <property name="margin" >
-            <number>0</number>
+          <widget class="QListWidget" name="nsCertType" />
+         </item>
+         <item>
+          <spacer>
+           <property name="orientation" >
+            <enum>Qt::Horizontal</enum>
            </property>
-           <property name="spacing" >
-            <number>6</number>
+           <property name="sizeType" >
+            <enum>QSizePolicy::Expanding</enum>
            </property>
-           <item>
-            <widget class="QTreeWidget" name="nsCertType" />
-           </item>
-           <item>
-            <spacer>
-             <property name="orientation" >
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeType" >
-              <enum>QSizePolicy::Expanding</enum>
-             </property>
-             <property name="sizeHint" >
-              <size>
-               <width>20</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-          </layout>
+           <property name="sizeHint" >
+            <size>
+             <width>20</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
          </item>
          <item>
           <layout class="QVBoxLayout" >
@@ -1335,6 +1312,8 @@ Example:
         </widget>
        </item>
       </layout>
+      <widget class="QWidget" name="" />
+      <widget class="QWidget" name="" />
      </widget>
     </widget>
    </item>
@@ -1412,8 +1391,8 @@ Example:
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>278</x>
-     <y>253</y>
+     <x>546</x>
+     <y>579</y>
     </hint>
     <hint type="destinationlabel" >
      <x>96</x>
@@ -1428,12 +1407,140 @@ Example:
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>369</x>
-     <y>253</y>
+     <x>116</x>
+     <y>579</y>
     </hint>
     <hint type="destinationlabel" >
      <x>179</x>
      <y>282</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>PushButton9</sender>
+   <signal>clicked()</signal>
+   <receiver>NewX509</receiver>
+   <slot>editSubAltName()</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>529</x>
+     <y>413</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>151</x>
+     <y>555</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>PushButton10</sender>
+   <signal>clicked()</signal>
+   <receiver>NewX509</receiver>
+   <slot>editIssAltName()</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>510</x>
+     <y>443</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>183</x>
+     <y>563</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>PushButton11</sender>
+   <signal>clicked()</signal>
+   <receiver>NewX509</receiver>
+   <slot>editCrlDist()</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>515</x>
+     <y>481</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>210</x>
+     <y>567</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>PushButton12</sender>
+   <signal>clicked()</signal>
+   <receiver>NewX509</receiver>
+   <slot>editAuthInfAcc()</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>520</x>
+     <y>517</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>230</x>
+     <y>572</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>applyTime</sender>
+   <signal>clicked()</signal>
+   <receiver>NewX509</receiver>
+   <slot>applyTimeDiff()</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>476</x>
+     <y>338</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>256</x>
+     <y>549</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>extDNadd</sender>
+   <signal>clicked()</signal>
+   <receiver>NewX509</receiver>
+   <slot>addX509NameEntry()</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>439</x>
+     <y>327</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>357</x>
+     <y>576</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>extDNdel</sender>
+   <signal>clicked()</signal>
+   <receiver>NewX509</receiver>
+   <slot>delX509NameEntry()</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>504</x>
+     <y>324</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>269</x>
+     <y>578</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>genKeyBUT</sender>
+   <signal>clicked()</signal>
+   <receiver>NewX509</receiver>
+   <slot>()</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>413</x>
+     <y>499</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>158</x>
+     <y>583</y>
     </hint>
    </hints>
   </connection>
